--- a/scss/colors/utilities/_settings.scss
+++ b/scss/colors/utilities/_settings.scss
@@ -10,7 +10,8 @@ $palette: () !default;
 $palette: map.merge(
   (
     // Color families
-    "color-families": (
+    "color-families":
+      (
         red,
         pink,
         fuchsia,
@@ -33,7 +34,8 @@ $palette: map.merge(
         slate
       ),
     // Shades
-    "shades": (
+    "shades":
+      (
         50,
         100,
         150,
