--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -77,8 +77,7 @@ $breakpoints: map.deep-merge(
   (
     // Small (landscape phones)
     // Font size: 17px
-    sm:
-      (
+    sm: (
         breakpoint: 576px,
         viewport: 510px,
         root-font-size: 106.25%,
@@ -86,8 +85,7 @@ $breakpoints: map.deep-merge(
 
     // Medium (tablets)
     // Font size: 18px
-    md:
-      (
+    md: (
         breakpoint: 768px,
         viewport: 700px,
         root-font-size: 112.5%,
@@ -95,8 +93,7 @@ $breakpoints: map.deep-merge(
 
     // Large
     // Font size: 19px
-    lg:
-      (
+    lg: (
         breakpoint: 1024px,
         viewport: 950px,
         root-font-size: 118.75%,
@@ -104,8 +101,7 @@ $breakpoints: map.deep-merge(
 
     // Extra large
     // Font size: 20px
-    xl:
-      (
+    xl: (
         breakpoint: 1280px,
         viewport: 1200px,
         root-font-size: 125%,
@@ -113,8 +109,7 @@ $breakpoints: map.deep-merge(
 
     // Extra extra large
     // Font size: 21px
-    xxl:
-      (
+    xxl: (
         breakpoint: 1536px,
         viewport: 1450px,
         root-font-size: 131.25%,
