--- a/scss/components/_timeline.scss
+++ b/scss/components/_timeline.scss
@@ -103,7 +103,7 @@
       > .point {
         // Full-width containers
         width: 100%;
-        padding-right: 25px;
+        padding-inline-end: 25px;
         padding-left: 40px;
 
         // Make all right containers behave like the left ones
