--- a/scss/components/_tab.scss
+++ b/scss/components/_tab.scss
@@ -93,7 +93,7 @@
       button {
         width: 100%;
         margin-top: 0.2rem;
-        margin-right: 0;
+        margin-inline-end: 0;
       }
     }
   }
