--- a/scss/content/_typography.scss
+++ b/scss/content/_typography.scss
@@ -145,7 +145,7 @@
     display: block;
     margin: var(#{$css-var-prefix}typography-spacing-vertical) 0;
     padding: var(#{$css-var-prefix}spacing);
-    border-right: none;
+    border-inline-end: none;
     border-left: 0.25rem solid var(#{$css-var-prefix}blockquote-border-color);
     border-inline-start: 0.25rem solid var(#{$css-var-prefix}blockquote-border-color);
     border-inline-end: none;
