--- a/scss/forms/_input-file.scss
+++ b/scss/forms/_input-file.scss
@@ -18,7 +18,7 @@
     background: none;
 
     &::file-selector-button {
-      margin-right: calc(var(#{$css-var-prefix}spacing) / 2);
+      margin-inline-end: calc(var(#{$css-var-prefix}spacing) / 2);
       padding: calc(var(#{$css-var-prefix}form-element-spacing-vertical) * 0.5)
         var(#{$css-var-prefix}form-element-spacing-horizontal);
     }
