--- a/scss/forms/_validation.scss
+++ b/scss/forms/_validation.scss
@@ -9,7 +9,7 @@
   #{$parent-selector} form:not([novalidate]) {
     input:user-valid:not(#{$excluded-elements}),
     input:user-invalid:not(#{$excluded-elements}) {
-      padding-right: calc(1.5em + 0.75rem);
+      padding-inline-end: calc(1.5em + 0.75rem);
       background-position: right calc(0.375em + 0.1875rem) center;
       background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
       background-repeat: no-repeat;
@@ -17,8 +17,8 @@
 
     select:user-valid:not([multiple], [size]),
     select:user-invalid:not([multiple], [size]) {
-      padding-right: calc(1.5em + 0.75rem);
-      padding-right: 4.2rem;
+      padding-inline-end: calc(1.5em + 0.75rem);
+      padding-inline-end: 4.2rem;
       background-position:
         right 0.75rem center,
         center right 2.25rem;
@@ -35,7 +35,7 @@
 
     textarea:user-valid:not(:placeholder-shown),
     textarea:user-invalid:not(:placeholder-shown) {
-      padding-right: calc(1.5em + 0.75rem);
+      padding-inline-end: calc(1.5em + 0.75rem);
       background-position: top calc(0.375em + 0.1875rem) right calc(0.375em + 0.1875rem);
       background-size: calc(0.75em + 0.375rem) calc(0.75em + 0.375rem);
       background-repeat: no-repeat;
@@ -123,7 +123,7 @@
           display: inline-block;
           width: 1rem;
           height: 1rem;
-          margin-right: 10px;
+          margin-inline-end: 10px;
           padding: 0;
           padding-top: calc(var(#{$css-var-prefix}spacing) * 0.25);
           border: none;
