--- a/scss/components/_tooltip.scss
+++ b/scss/components/_tooltip.scss
@@ -52,7 +52,7 @@
       transform: translate(-50%, 0rem);
       border-top: 0.3rem solid;
       border-inline-end: 0.3rem solid transparent;
-      border-left: 0.3rem solid transparent;
+      border-inline-start: 0.3rem solid transparent;
       border-radius: 0;
       background-color: transparent;
       content: "";
@@ -87,7 +87,7 @@
       &:after {
         transform: translate(0.3rem, -50%);
         border: 0.3rem solid transparent;
-        border-left: 0.3rem solid;
+        border-inline-start: 0.3rem solid;
       }
     }
 
