--- a/scss/forms/_validation.scss
+++ b/scss/forms/_validation.scss
@@ -103,7 +103,7 @@
 
     /* File list when selected from the file input */
     .file-list {
-      padding-left: 0;
+      padding-inline-start: 0;
       li {
         display: flex;
         align-items: center;
