--- a/scss/layout/_container.scss
+++ b/scss/layout/_container.scss
@@ -10,9 +10,9 @@
   #{$parent-selector} .container-fluid {
     width: 100%;
     margin-inline-end: auto;
-    margin-left: auto;
+    margin-inline-start: auto;
     padding-inline-end: var(#{$css-var-prefix}spacing);
-    padding-left: var(#{$css-var-prefix}spacing);
+    padding-inline-start: var(#{$css-var-prefix}spacing);
   }
 
   #{$parent-selector} .container {
@@ -24,7 +24,7 @@
           @if $first-breakpoint {
             $first-breakpoint: false;
             padding-inline-end: 0;
-            padding-left: 0;
+            padding-inline-start: 0;
           }
         }
       }
