--- a/scss/components/_group.scss
+++ b/scss/components/_group.scss
@@ -233,7 +233,7 @@
       + label {
         z-index: 10;
         // label was positioned above placeholder..
-        margin-top: 5px;
+        margin-block-start: 5px;
       }
     }
 
