--- a/scss/components/_popover.scss
+++ b/scss/components/_popover.scss
@@ -14,7 +14,7 @@
       background: rgba(0, 0, 0, 0.7);
     }
     button {
-      margin-top: -10px;
+      margin-block-start: -10px;
       padding: 0;
       border: 0 none;
       background: transparent;
