--- a/scss/components/_tab.scss
+++ b/scss/components/_tab.scss
@@ -92,7 +92,7 @@
       [role="tabpanel"],
       button {
         width: 100%;
-        margin-top: 0.2rem;
+        margin-block-start: 0.2rem;
         margin-inline-end: 0;
       }
     }
