--- a/scss/components/_tooltip.scss
+++ b/scss/components/_tooltip.scss
@@ -50,7 +50,7 @@
       width: 0;
       padding: 0;
       transform: translate(-50%, 0rem);
-      border-top: 0.3rem solid;
+      border-block-start: 0.3rem solid;
       border-inline-end: 0.3rem solid transparent;
       border-inline-start: 0.3rem solid transparent;
       border-radius: 0;
