--- a/scss/forms/_checkbox-radio-switch.scss
+++ b/scss/forms/_checkbox-radio-switch.scss
@@ -22,7 +22,7 @@
     appearance: none;
     width: 1.25em;
     height: 1.25em;
-    margin-top: -0.125em;
+    margin-block-start: -0.125em;
     margin-inline-end: 0.5em;
     border-width: var(#{$css-var-prefix}border-width);
     vertical-align: middle;
