--- a/scss/themes/default/_styles.scss
+++ b/scss/themes/default/_styles.scss
@@ -249,37 +249,37 @@
     h1 {
       #{$css-var-prefix}font-size: 2rem;
       #{$css-var-prefix}line-height: 1.125;
-      #{$css-var-prefix}typography-spacing-top: 3rem;
+      #{$css-var-prefix}typography-spacing-block-start: 3rem;
     }
 
     h2 {
       #{$css-var-prefix}font-size: 1.75rem;
       #{$css-var-prefix}line-height: 1.15;
-      #{$css-var-prefix}typography-spacing-top: 2.625rem;
+      #{$css-var-prefix}typography-spacing-block-start: 2.625rem;
     }
 
     h3 {
       #{$css-var-prefix}font-size: 1.5rem;
       #{$css-var-prefix}line-height: 1.175;
-      #{$css-var-prefix}typography-spacing-top: 2.25rem;
+      #{$css-var-prefix}typography-spacing-block-start: 2.25rem;
     }
 
     h4 {
       #{$css-var-prefix}font-size: 1.25rem;
       #{$css-var-prefix}line-height: 1.2;
-      #{$css-var-prefix}typography-spacing-top: 1.874rem;
+      #{$css-var-prefix}typography-spacing-block-start: 1.874rem;
     }
 
     h5 {
       #{$css-var-prefix}font-size: 1.125rem;
       #{$css-var-prefix}line-height: 1.225;
-      #{$css-var-prefix}typography-spacing-top: 1.6875rem;
+      #{$css-var-prefix}typography-spacing-block-start: 1.6875rem;
     }
 
     h6 {
       #{$css-var-prefix}font-size: 1rem;
       #{$css-var-prefix}line-height: 1.25;
-      #{$css-var-prefix}typography-spacing-top: 1.5rem;
+      #{$css-var-prefix}typography-spacing-block-start: 1.5rem;
     }
   }
 
